# DadosLivres

./: .flaskenv  .gitignore  Pipfile  README.md  config.py  dadoslivres.ini  deployflask.service  deployflaskapp  pyproject.toml  requirements.txt  test.py
app/: __init__.py  models.py
app/api/: routes.py
app/auth/: email.py  forms.py  routes.py
app/category/: routes.py
app/main/: form.py  routes.py
app/static/js/: myscripts.js
app/templates/: _rankingSoftwares.html  _rankingSources.html  _software.html  about.html  base.html  contact.html  edit_password.html  edit_profile.html  edit_software.html  edit_source.html  how_to_contribute.html  index.html  privacy_policy.html  ranking.html  register_software.html  register_source.html  search.html  software.html  software_profile.html  source.html  source_profile.html  terms.html  user.html
app/templates/auth/: login.html  register_request.html  reset_password.html  reset_password_request.html
app/templates/category/: Climate_Software.html  Climate_Source.html  Countries_Software.html  Countries_Source.html  Covid19_Software.html  Covid19_Source.html  Culture_Software.html  Culture_Source.html  Education_Software.html  Education_Source.html  Environment_Software.html  Environment_Source.html  Finances_Software.html  Finances_Source.html  Financial_Software.html  (+21 more)
app/util/: validators.py
deployment/nginx/: dados-livres  dadoslivres
deployment/supervisor/: dados-livres.conf
deployment/system/: dadoslivres.service
migrations/versions/: 680f7edfae15_atualizei.py  bc8afcce886e_atualizei_bd.py
(+2 files in other folders)
